Fix toggle menu btn blur and alignment

--- a/styles.css
+++ b/styles.css
@@ -674,14 +674,6 @@ footer ul {
 
   /* TOP NAVIGATION */
   
-  @supports (backdrop-filter: blur(10px)) {
-    .main-nav,
-    label[for='menu-toggle'] {
-      backdrop-filter: blur(10px);
-      background: rgba(0, 0, 0, 0.8);
-    }
-  }
-
   .main-nav {
     height: initial;
     overflow: initial; /* Having this set to "initial", makes it so the scroll position will be restored when the mobile navigation is opened again, otherwise it is reset each time the .main-nav is closed. (For some reason) */
@@ -689,6 +681,9 @@ footer ul {
     width: 100%;
     border-right: none;
     box-shadow: 0 30px 40px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+    background: rgba(0, 0, 0, 0.8);
   }
 
   body:has(#menu-toggle:checked) .main-nav {
@@ -715,14 +710,18 @@ footer ul {
   body:has(#menu-toggle:checked) .menu-bar {
     position: sticky;
     top: 0;
-    background: rgba(0, 0, 0, 0.8);
-    box-shadow: 0 30px 40px rgba(0, 0, 0, 0.1);
     margin-bottom: 40px;
+    box-shadow: 0 30px 40px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+    background: rgba(0, 0, 0, 0.8);
   }
 
   label[for='menu-toggle'] {
-    display: block;
-    width: 190px;
+    display: flex;
+    gap: 10px;
+    align-items: center;
+    align-self: stretch;
     padding: 0 20px;
     color: var(--silver);
     white-space: nowrap;
@@ -732,18 +731,10 @@ footer ul {
     font-weight: 500;
     user-select: none;
     cursor: pointer;
-    padding-bottom: 2px;
-    position: relative;
-    z-index: 10;
   }
   label[for='menu-toggle']:hover {
     background-color: var(--blood);
     color: var(--black);
-  }
-
-  label[for='menu-toggle']::selection {
-    /*background: #000000e0;*/
-    color: inherit;
   }
 
   label[for='menu-toggle'] > .menu-icon {
@@ -770,12 +761,10 @@ footer ul {
   }
   
   .menu-title {
-    margin-top: -37px;
-    margin-left: 27px;
-    padding-bottom: 1em;
     font-size: 16px;
     font-family: 'IBM VGA 8x16', monospace;
     text-transform: uppercase;
+    padding-top: 2px;
   }
 
   /* INDEX NAVIGATION */
